Adding a temporary update to circle.yml to generate AMIs on this branch.
This way, we don’t have to test the AMI generation functionality
directly on the master branch. Once I validate functionality, I’ll
remove this and merge.

--- a/circle.yml
+++ b/circle.yml
@@ -26,3 +26,9 @@ deployment:
     commands:
       # If a new release is tagged in GitHub, build the AMI and publish it to all regions
       - $CIRCLE_PROJECT_NAME/_ci/publish-amis.sh
+
+  tmp-test:
+      branch: publish-amis
+      commands:
+        # If a new release is tagged in GitHub, build the AMI and publish it to all regions
+        - $CIRCLE_PROJECT_NAME/_ci/publish-amis.sh
