--- a/circle.yml
+++ b/circle.yml
@@ -25,20 +25,14 @@ deployment:
     tag: /v.*/
     commands:
       # If a new release is tagged in GitHub, build the AMI and publish it to all regions.
-      # - We take the somewhat awkward step of running the following commands in the background so that both Packer builds
-      #   can run simultaneously. The alternative would be to rewrite packer-build-artifact to support multiple builds,
-      #   but this simple hack seems more efficient.
-      # - Note that build output is available in ~/ubuntu16/packer-build.log and ~/amazon-linux/packer-build.log
-      - mkdir -p ~/ubuntu16 && cd ~/ubuntu16 && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami" &
-      - mkdir -p ~/amazon-linux && cd ~/amazon-linux && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami" &
+      # Note that build output is available in ~/ubuntu16/packer-build.log and ~/amazon-linux/packer-build.log
+      - mkdir -p ~/ubuntu16 && cd ~/ubuntu16 && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami"
+      - mkdir -p ~/amazon-linux && cd ~/amazon-linux && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami"
 
   tmp-test:
     branch: publish-amis
     commands:
       # If a new release is tagged in GitHub, build the AMI and publish it to all regions.
-      # - We take the somewhat awkward step of running the following commands in the background so that both Packer builds
-      #   can run simultaneously. The alternative would be to rewrite packer-build-artifact to support multiple builds,
-      #   but this simple hack seems more efficient.
-      # - Note that build output is available in ~/ubuntu16/packer-build.log and ~/amazon-linux/packer-build.log
-      - mkdir -p ~/ubuntu16 && cd ~/ubuntu16 && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami" &
-      - mkdir -p ~/amazon-linux && cd ~/amazon-linux && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami" &
+      # Note that build output is available in ~/ubuntu16/packer-build.log and ~/amazon-linux/packer-build.log
+      - mkdir -p ~/ubuntu16 && cd ~/ubuntu16 && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami"
+      - mkdir -p ~/amazon-linux && cd ~/amazon-linux && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami"
