--- a/circle.yml
+++ b/circle.yml
@@ -5,10 +5,10 @@ machine:
 dependencies:
   override:
     # Install the gruntwork-module-circleci-helpers and use it to configure the build environment and run tests.
-    - curl -Ls https://raw.githubusercontent.com/gruntwork-io/gruntwork-installer/master/bootstrap-gruntwork-installer.sh | bash /dev/stdin --version v0.0.14
-    - gruntwork-install --module-name "gruntwork-module-circleci-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.3.11"
-    - gruntwork-install --module-name "build-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.3.11"
-    - gruntwork-install --module-name "aws-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.3.11"
+    - curl -Ls https://raw.githubusercontent.com/gruntwork-io/gruntwork-installer/master/bootstrap-gruntwork-installer.sh | bash /dev/stdin --version v0.0.16
+    - gruntwork-install --module-name "gruntwork-module-circleci-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.3.12"
+    - gruntwork-install --module-name "build-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.3.12"
+    - gruntwork-install --module-name "aws-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.3.12"
     - configure-environment-for-gruntwork-module --go-src-path test
 
   cache_directories:
@@ -25,14 +25,12 @@ deployment:
     tag: /v.*/
     commands:
       # If a new release is tagged in GitHub, build the AMI and publish it to all regions.
-      # Note that build output is available in ~/ubuntu16/packer-build.log and ~/amazon-linux/packer-build.log
-      - mkdir -p ~/ubuntu16 && cd ~/ubuntu16 && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami"
-      - mkdir -p ~/amazon-linux && cd ~/amazon-linux && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami"
+      - ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami"
+      - ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami"
 
   tmp-test:
     branch: publish-amis
     commands:
       # If a new release is tagged in GitHub, build the AMI and publish it to all regions.
-      # Note that build output is available in ~/ubuntu16/packer-build.log and ~/amazon-linux/packer-build.log
-      - mkdir -p ~/ubuntu16 && cd ~/ubuntu16 && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami"
-      - mkdir -p ~/amazon-linux && cd ~/amazon-linux && ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami"
+      - ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu-16-ami"
+      - ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami"
