--- a/circle.yml
+++ b/circle.yml
@@ -18,8 +18,8 @@ dependencies:
 
 test:
   override:
-    # To create AMIs for the first time in a new AWS account, run the CircleCI tests in the init-ami branch. This will
-    # bypass tests but still run the AMI.
+    # To create AMIs for the first time in a new AWS account, make the code changes (e.g. updating AWS account number)
+    # in the appropriate .tf files) in a branch named "publish-amis". This will bypass tests but still build the AMIs.
     - if [[ $CIRCLE_BRANCH != "publish-amis" ]]; then run-go-tests --path test; fi
 
 deployment:
@@ -32,6 +32,8 @@ deployment:
 
     branch: publish-amis
     commands:
-      # If we are in a branch called publish-amis, build the AMIs on each commit.
+      # We generally only want to build AMIs on new releases, but when we are setting up AMIs in a new account for the
+      # first time, we want to build the AMIs but NOT run automated tests, since those tests will fail without an existing
+      # AMI already in the AWS Account.
       - ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "ubuntu16-ami"
       - ~/$CIRCLE_PROJECT_REPONAME/_ci/publish-amis.sh "amazon-linux-ami"
