--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,11 @@ jobs:
       - run: gruntwork-install --module-name "aws-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.12.2"
       - run: gruntwork-install --module-name "git-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.12.2"
       - run: gruntwork-install --module-name "build-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.12.2"
-      - run: /go/src/github.com/hashicorp/terraform-aws-consul/_ci/publish-amis.sh "/go/src/github.com/hashicorp/terraform-aws-consul/examples/consul-ami/consul.json" "ubuntu16-ami"
-      - run: /go/src/github.com/hashicorp/terraform-aws-consul/_ci/publish-amis.sh "/go/src/github.com/hashicorp/terraform-aws-consul/examples/consul-ami/consul.json" "amazon-linux-ami"
+      # We generally only want to build AMIs on new releases, but when we are setting up AMIs in a new account for the
+      # first time, we want to build the AMIs but NOT run automated tests, since those tests will fail without an existing
+      # AMI already in the AWS Account.
+      - run: /go/src/github.com/hashicorp/terraform-aws-consul/_ci/publish-amis.sh "ubuntu16-ami"
+      - run: /go/src/github.com/hashicorp/terraform-aws-consul/_ci/publish-amis.sh "amazon-linux-ami"
 
 workflows:
   version: 2
