--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,8 @@ jobs:
       # first time, we want to build the AMIs but NOT run automated tests, since those tests will fail without an existing
       # AMI already in the AWS Account.
       - run: _ci/publish-amis.sh "ubuntu16-ami"
-      - run: _ci/publish-amis.sh "amazon-linux-ami"
+      - run: _ci/publish-amis.sh "ubuntu18-ami"
+      - run: _ci/publish-amis.sh "amazon-linux-2-ami"
 
 workflows:
   version: 2
